--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,1 +1,21 @@
-https://gitpod.io/#https://github.com/youruser/smart_lock_app
+name: smart_lock_app
+description: אפליקציה להשכרת מנעול חכם
+publish_to: 'none'
+version: 1.0.0+1
+
+environment:
+  sdk: ">=3.0.0 <4.0.0"
+
+dependencies:
+  flutter:
+    sdk: flutter
+  qr_code_scanner: ^1.0.1
+  shared_preferences: ^2.2.3
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+flutter:
+  uses-material-design: true
+
